# pgtg

./: .gitignore  README.md  install.sh  pyproject.toml  run_eval.sh  setup.cfg  submit.sh  train.py
docs/: Constructor_Arguments.md  Environment.md  Getting_Started.md  Version_History.md  index.md
pgtg/: __init__.py  constants.py  environment.py  graphic.py  map.py  map_generator.py  map_tiles_data.py  parser.py  pyproject.toml  submit.sh  train.py
tests/: test_environment.py  test_integration.py  test_map.py  test_map_generator.py  test_parser.py  utils.py
tests/test_data/: 1x1_crossing_map.json  1x1_map.json  4x1_map.json  map_with_all_deadends.json  map_with_all_directions.json  reproducibility_data.py
