[tool.poetry]
authors = [
  "Timo P. Gros <timopgros@cs.uni-saarland.de>",
  "Julius Kamp <juka00001@stud.uni-saarland.de>",
  "Naya Rudolph <naya.rudolph00@gmail.com>",
  "Mel Ditter <zitret17@gmail.com>",
  "Felix M. Kuntz <feku00003@stud.uni-saarland.de>"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
description = "Python simulation of a driving challange. Compatible with the Gymnasium API standard."
name = "pgtg"
readme = "README.md"
version = "0.5.0"

[tool.poetry.dependencies]
python = "^3.10"
Pillow = ">=10.0.0"
matplotlib = ">=3.4.0"
numpy = ">=1.21.0,<3.0.0"
graph-theory = ">=2022.4.0"
gymnasium = ">=0.26.0,<2.0.0"
pygame = ">=2.1.0"

[tool.poetry.group.dev.dependencies]
black = { version = "*", allow-prereleases = true }
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.2"
pep8-naming = "^0.9.1"
pytest = "^6.2.5"
jupyter = "^1.0.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
